Columnized experiences, fixed spacing details

--- a/sass/experiences.scss
+++ b/sass/experiences.scss
@@ -12,7 +12,7 @@ $ms-ratio: $golden;
 }
 
 .xp {
-    margin: 10px auto 0px auto;
+    margin: 10px auto 50px auto;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.8);
     display: inline-block;
@@ -111,4 +111,15 @@ $ms-ratio: $golden;
     font-style:normal;
     color:#999;
   }
+}
+
+@media screen and (max-width: $media-tablet-max) { 
+  .capacity, .date {
+    margin: 10px 0 0 0;
+  }
+
+  h1 {
+    margin: 0 0 20px 0;
+  }
+
 }
